--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,9 +2,11 @@
 
 - type: github
   icon: "fab fa-github"
+  url: 'https://github.com'
 
 - type: twitter
   icon: "fa-brands fa-x-twitter"
+  url: 'https://github.com'
 
 - type: email
   icon: "fas fa-envelope"
